# ChangeLog for sys-apps/keyexec
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*keyexec-0.1.2-r4 (01 Jun 2010)

  01 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -keyexec-0.1.2-r3.ebuild, +keyexec-0.1.2-r4.ebuild:
  Added depend from rdesktop. Fix compile stage.
