@@ -1,2 +1,3 @@
 DIST pam_keystore-0.1.3.tar.bz2 5894 RMD160 4b66977d255848a449ade60fc76795abc6e716ca SHA1 8f200accba4af55b44b8a59a79cc1b562c11f0ad SHA256 edc8bafd89cc8e5a18b23ce521beaba250fcfd4a53d8c2bdab4d17b77058f493
-EBUILD pam_keystore-0.1.3.ebuild 531 RMD160 3b56d3ec1c0bc777bb99ba51d62e0751ea84452d SHA1 035b0edbf876842b653c4458abe4e4f569be0f5c SHA256 89c0d385dcd3e43058c923a44a1713fc7c0660b0a6efce1ab09425a62d94fac2
+EBUILD pam_keystore-0.1.3.ebuild 539 RMD160 fd6e8e4bd73dab88ce55c8465d6ccaf2219f1a77 SHA1 1922e3d12a94992f524801ae040913464e382ac5 SHA256 9bc0093310a7f734746ef2bc89b52e9c59b6cc9394a1b3413546f42bee6f6d90
+MISC ChangeLog 232 RMD160 1249aa9e61cd768586d05f9450767598e5314eb4 SHA1 921fd3e0ffa13fa9d8f63a16bdea7a100329164e SHA256 b96c8de170e33b3070dc46cbdff1fa12fd1c195dfe03a6f9083bd057ef30192c
