@@ -1,9 +1,9 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 DESCRIPTION="Keeps a login and the password the user in the kernel"
-HOMEPAGE="http://www.calculate-linux.org/pam_keystore"
+HOMEPAGE="http://www.calculate-linux.org/main/en/pam_keystore"
 SRC_URI="ftp://ftp.calculate.ru/pub/calculate/${PN}/${P}.tar.bz2"
 
 LICENSE="Apache-2.0"
