@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  keyexec-0.1.2-r4.ebuild:
+  Change home page.
+
 *keyexec-0.1.2-r4 (01 Jun 2010)
 
   01 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
